# noctua

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  package-lock.json  package.json  pyproject.toml
.bruno/supabase/: bruno.json  collection.bru  fetch-rss.bru
.github/: copilot-instructions.md
.github/workflows/: build.yml  deploy-pages.yml  deploy.yml  quick-update.yml
app/: astro.config.mjs  package.json  tailwind.config.mjs
app/noctua/: astro.config.mjs  tsconfig.json
app/public/: offline.html  sw.js
app/vibilia/: astro.config.mjs  package-lock.json  package.json
supabase/: README.md  config.toml  db-info.json  seed.sql
supabase/migrations/: 20260210201350_remote_schema.sql  20260211223700_sections_profiles.sql  20260215103000_auth_profiles_trigger_and_policies.sql  20260215123000_get_user_home_feeds.sql  20260216210717_remote_schema.sql  20260216223000_invoke_fetch_rss_set_search_path.sql  20260216235500_articles_rls_owned_sections.sql  20260218110000_sections_and_section_feeds_sort_order.sql  20260218214000_article_reads_rls.sql  20260218221000_article_reads_drop_updated_at.sql  20260221181409_added icons.sql  20260315000000_init_schema.sql  20260315000001_add_car_details.sql  20260327193000_unify_profiles_single_trigger.sql  20260327223000_fetch_rss_hourly_schedule.sql  20260327233000_refresh_fuel_prices_hourly_schedule.sql
supabase/snippets/: seed-feeds.sql
workflow/common/: __init__.py  config.py  io.py  models.py
workflow/download/: main.py
workflow/filter/: main.py
workflow/summarize/: index.js  package.json
(+74 files in other folders)
